docs: Improve learning plan - Add new lessons to module 02, - introduce modules 17-20, - update existing module READMEs, - refine the overall roadmap.