@@ -1,89 +1,48 @@
-# Moduł 02: Java Internals
+# Moduł 02: Java Internals + Core Language Features
 
-## Cel
-Zrozumieć jak Java działa pod spodem - JVM, pamięć, Garbage Collection, wątki.
+> Cel: Zrozumieć "silnik" Javy (JVM) i opanować kluczowe mechanizmy języka, których TypeScript nie ma.
 
----
+> `opt` = optional
 
-## Tematy do opanowania
+## Lekcje — JVM & Memory
 
-### 1. JVM Architecture
-- [ ] Co to jest JVM (Java Virtual Machine)
-- [ ] Proces wykonania: .java → javac → .class → JVM → native
-- [ ] Class Loader - hierarchia (Bootstrap, Extension, Application)
-- [ ] "Write Once, Run Anywhere" - dlaczego działa
+| #   | Temat              | Opis                                                        | Status |
+| --- | ------------------ | ----------------------------------------------------------- | ------ |
+| 01  | JVM Architecture   | Bytecode, ClassLoaders, JIT — jak kod jest uruchamiany.     | ⚪     |
+| 02  | Memory Model       | Stack vs Heap. Gdzie żyją zmienne i obiekty.                | ⚪     |
+| 03  | Pass by Value      | Obalenie mitu "Pass by Reference". Referencje vs Wartości.  | ⚪     |
+| 04  | String Pool `opt`  | Immutability, `intern()`, StringBuilder vs Concatenation.   | ⚪     |
+| 05  | Garbage Collection | Cykl życia obiektu, Generacje, jak unikać Memory Leaks.     | ⚪     |
+| 06  | Exceptions         | Checked vs Unchecked. Dlaczego `try-catch` to nie wszystko. | ⚪     |
+| 07  | Java EE i Spring   | Beany, Jakarta EE, Servlety — most między Javą a Springiem. | ⚪     |
 
-### 2. JIT Compilation
-- [ ] Interpreter vs JIT Compiler
-- [ ] Hot spots - co to jest
-- [ ] Dlaczego Java przyspiesza w runtime
-- [ ] Warm-up time
+## Lekcje — Core Language Features 🆕
 
-### 3. Memory Model
-- [ ] Stack vs Heap - różnice
-- [ ] Co trafia na Stack (primitives, references)
-- [ ] Co trafia na Heap (objects, arrays)
-- [ ] Stack frame - co zawiera
+| #   | Temat                     | Opis                                                                 | Status |
+| --- | ------------------------- | -------------------------------------------------------------------- | ------ |
+| 08  | Generics + Type Erasure   | Bounded types, wildcards, erasure na runtime. Kluczowe dla kolekcji. | ⚪     |
+| 09  | Collections Framework     | List, Set, Map, Queue — hierarchia, implementacje, kiedy co.         | ⚪     |
+| 10  | Enums jako klasy          | Metody, pola, implementacja interfejsów. Nie jak TS `enum`.          | ⚪     |
+| 11  | Optional + Null Handling  | `Optional<T>`, `Objects.requireNonNull()`. Zamiast TS `?.` i `??`.   | ⚪     |
+| 12  | Functional Interfaces     | Predicate, Function, Consumer, Supplier, lambdy, `::` references.    | ⚪     |
+| 13  | Date/Time API             | LocalDate, ZonedDateTime, Instant, Duration. Inne niż JS `Date`.     | ⚪     |
+| 14  | Sealed Classes + Patterns | Sealed types, pattern matching z instanceof, switch expressions.     | ⚪     |
+| 15  | var, final, wrappers      | Type inference, keyword `final`, autoboxing, Integer Cache.          | ⚪     |
 
-### 4. Pass by Value
-- [ ] Java ZAWSZE pass by value
-- [ ] Dla primitives: kopia wartości
-- [ ] Dla obiektów: kopia referencji (nie obiektu!)
-- [ ] Dlaczego reassign w metodzie nie zmienia oryginału
+`⚪ Not Started` · `🟡 In Progress` · `🟢 Done`
 
-### 5. String Pool
-- [ ] Co to jest String Pool
-- [ ] Literały vs `new String()`
-- [ ] `==` vs `.equals()` dla Stringów
-- [ ] Dlaczego String jest immutable
-- [ ] StringBuilder - kiedy używać
+## Projekt
 
-### 6. Garbage Collection
-- [ ] Po co GC (automatyczne zarządzanie pamięcią)
-- [ ] Reachability - jak GC decyduje co usunąć
-- [ ] Generational GC (Young, Old, Metaspace)
-- [ ] Minor GC vs Major GC
-- [ ] GC algorithms: G1 (default), ZGC
-
-### 7. Memory Leaks w Javie
-- [ ] Tak, są możliwe!
-- [ ] Static collections rosnące w nieskończoność
-- [ ] Niezamknięte resources
-- [ ] Try-with-resources
-
-### 8. Primitive vs Wrapper Types
-- [ ] Lista primitives (int, long, boolean, etc.)
-- [ ] Wrapper classes (Integer, Long, Boolean)
-- [ ] Autoboxing / Unboxing
-- [ ] Integer cache (-128 do 127)
-- [ ] `==` vs `.equals()` dla wrapperów
-
-### 9. Exceptions
-- [ ] Hierarchia: Throwable → Error / Exception
-- [ ] Checked vs Unchecked exceptions
-- [ ] Kiedy które używać
-- [ ] Try-catch-finally
-- [ ] Try-with-resources
-
----
+W tym module nie budujemy funkcjonalności biznesowej w `wallet-manager`.
+Zamiast tego tworzymy małe, izolowane programy w `exercises/`, które udowadniają działanie JVM
+i kluczowych mechanizmów języka.
 
 ## Powiązana teoria
-- `docs/theory/01-java-fundamentals.md` → Cały plik
+
+- `docs/theory/01-java-fundamentals.md`
 - `docs/theory/02-concurrency.md` → Wstęp do wątków
 
----
+## Wymagania wstępne
 
-## Ćwiczenia praktyczne
-1. Napisz kod pokazujący różnicę `==` vs `.equals()` dla Stringów
-2. Udowodnij że Java jest pass-by-value (modyfikacja obiektu vs reassign)
-3. Wywołaj GC i zaobserwuj logi (`-Xlog:gc*`)
-4. Stwórz memory leak (static List bez czyszczenia)
-
----
-
-## Sprawdzian gotowości
-- [ ] Potrafię wytłumaczyć jak JVM wykonuje kod
-- [ ] Wiem co jest na Stack, a co na Heap
-- [ ] Rozumiem dlaczego `==` dla Stringów może być true lub false
-- [ ] Wiem co robi Garbage Collector
-- [ ] Rozumiem różnicę checked vs unchecked exceptions
+- ✅ Moduł 01 ukończony (REST API, Records, Stream API)
+- 🛠 Zainstalowane JDK 25 (narzędzia: `jvisualvm`, `jconsole`)
